# alfred

./: .gitignore  flow.toml  readme.md
docs/: flow-extension-new-mac.md
flow/: Cargo.toml  install.sh
flow/Flow.alfredworkflow/: info.plist
flow/src/: lib.rs  main.rs
flow/swift-helpers/: raise-window.swift  windows.swift
